# colorboy-py

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  test.py
colorboy/: __init__.py  bg_colors.py  colors.py  styles.py
