[tool.poetry]
name = "colorboy"
version = "1.0.0"
description = "Easily add color to your strings"
authors = ["KH <kasperkh.kh@gmail.com>"]
readme = 'README.md'
repository = "https://github.com/spectralkh/colorboy-py"
keywords = ['colorboy', 'color', 'terminal', 'chalk', 'colorama', 'termcolor']

[tool.poetry.dependencies]
python = "*"
colorama = "^0.3.9"

[tool.poetry.dev-dependencies]
pylint = "^2.1"
