[tool.poetry]
name = "colorboy"
version = "1.0.2"
description = "Easily add color to your strings"
authors = ["kasper.space"]
readme = 'README.md'
repository = "https://github.com/probablykasper/colorboy-py"
keywords = ['colorboy', 'color', 'terminal', 'chalk', 'colorama', 'termcolor']

[tool.poetry.dependencies]
python = "^3.5"
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]
pylint = "^2.6"
